# PAXEL

./: .gitignore  README.md
Paxel/: CMakeLists.txt  discussionboard.cpp  discussionboard.h  discussionboard.ui  homescreen.cpp  homescreen.h  homescreen.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  profile.cpp  profile.h  profile.ui  replieswindow.cpp  replieswindow.h  replieswindow.ui  signup.cpp  signup.h  signup.ui  threadmenuwindow.cpp  threadmenuwindow.h  threadmenuwindow.ui  utils.cpp  utils.h
QT/Paxel/: CMakeLists.txt  homescreen.cpp  homescreen.h  mainwindow.cpp  mainwindow.ui  signup.h
SourceCodeSQLTesting/: SourceCodeSQLTesting.vcxproj  Testing.cpp
hdr/: Testing.h  Utils.h  profile.h
scripts/: clangBuild.bat
src/: Testing.cpp  main.cpp  profile.cpp
